iodine (0.6.0~rc1-5) UNRELEASED; urgency=low

  * Don't source /etc/default/iodine in config script but read out the values
    with awk. This allows to use shell constructs like $() in the file and
    preserve them during re-configuration (closes: #612723).
    Thanks to "Debian bug at v.nix.is" for the bug report.

 -- gregor herrmann <gregoa@debian.org>  Thu, 10 Feb 2011 15:33:18 +0100

iodine (0.6.0~rc1-4) unstable; urgency=low

  * Upload to unstable.

 -- gregor herrmann <gregoa@debian.org>  Mon, 07 Feb 2011 18:38:57 +0100

iodine (0.6.0~rc1-3) experimental; urgency=low

  [ gregor herrmann ]
  * Build with hardening; thanks to Romain Francoise for the bug report and
    the patch (closes: #589054).
  * New patch uninitialized-inside_topdomain.patch: initialize
    inside_topdomain before using it; thanks to Samuel Thibault for the bug
    report and the patch (closes: #596740).
  * Set Standards-Version to 3.9.1 (no changes).
  * Add Danish debconf translation, thanks to Joe Dalton (closes: #602447).
  * Update iodine-client-start to version 1.0.3, commit 04c2dee
    (closes: #605703).
  * debian/copyright: update years of packaging copyright, update formatting.
  * Update to experimental because of the freeze.

  [ tony mancill ]
  * Update reference to README file in README.Debian (closes: #597736)

 -- gregor herrmann <gregoa@debian.org>  Fri, 14 Jan 2011 03:01:13 +0100

iodine (0.6.0~rc1-2) unstable; urgency=low

  [ tony mancill ]
  * Update init.d script to support spaces in password (closes: #597258)

 -- gregor herrmann <gregoa@debian.org>  Mon, 20 Sep 2010 22:25:48 +0200

iodine (0.6.0~rc1-1) unstable; urgency=low

  * debian/watch: relax regexp to also catch release candidates.

  * New upstream release:
    - return nonzero if tunnel fails to open (closes: #534186)
    - added support for CNAME/TXT/A/MX query types (closes: #587894)
    - includes the changes we had backported in openlog.patch, so remove the
      patch now