@@ -1,9 +1,11 @@
 #!/usr/bin/make -f
 
 include /usr/share/hardening-includes/hardening.make
-
 export CFLAGS += $(HARDENING_CFLAGS)
 export LDFLAGS += $(HARDENING_LDFLAGS)
+
+PACKAGE = $(shell dh_listpackages)
+TMP     = $(CURDIR)/debian/$(PACKAGE)
 
 %:
 	dh $@
@@ -20,7 +22,11 @@ override_dh_auto_build:
 		$(CURDIR)/debian/iodine-client-start
 
 override_dh_auto_install:
-	dh_auto_install -- DESTDIR=$(CURDIR)/debian/iodine prefix=/usr
+	dh_auto_install -- DESTDIR=$(TMP) prefix=/usr
 
 override_dh_installinit:
 	dh_installinit --name=iodined
+
+override_dh_installlogcheck:
+	dh_installlogcheck
+	mv $(TMP)/etc/logcheck/ignore.d.server/iodine $(TMP)/etc/logcheck/ignore.d.server/iodined
